# share

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  Makefile  PRD.md  README.md  hk.pkl  mise.toml  renovate.json
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/src/: requirements.txt
backend/src/share/: __init__.py  dev_app.py  handler.py
backend/src/share/api/: __init__.py  app.py  routes.py
backend/src/share/auth/: __init__.py  dependencies.py  jwks.py  models.py  signer.py  verifier.py
backend/src/share/config/: __init__.py  settings.py
backend/src/share/content/: __init__.py  headers.py  item.py  limits.py  source_type.py
backend/src/share/devproxy/: __init__.py  __main__.py  config.py  proxy.py
backend/src/share/errors/: __init__.py  envelope.py  exceptions.py
backend/src/share/gate/: __init__.py  host_gate.py
backend/src/share/hosts/: __init__.py  registry.py
backend/src/share/listing/: __init__.py  cursor.py  dependencies.py  models.py  service.py
backend/src/share/logging/: __init__.py  structured.py
backend/src/share/middleware/: __init__.py  context.py  host_gate.py
backend/src/share/preview/: __init__.py  dependencies.py  service.py
backend/src/share/publish/: __init__.py  dependencies.py  invalidator.py  service.py
backend/src/share/renderer/: __init__.py  renderer.py  shell.py
backend/src/share/repository/: __init__.py  metadata.py
backend/src/share/security/: __init__.py  csrf.py
backend/src/share/static_site/: __init__.py  serving.py
backend/src/share/storage/: __init__.py  object_storage.py
backend/src/share/upload/: __init__.py  dependencies.py  models.py  service.py
backend/tests/: conftest.py  test_access_verifier.py  test_app_hosts.py  test_errors.py  test_finalize_upload.py  test_host_gate.py  test_invalidator.py  test_jwks_cache.py  test_lambda_package.py  test_list_content.py  test_local_proxy.py  test_local_signer_roundtrip.py  test_mangum_handler.py  test_presign_upload.py  test_private_preview.py  test_publish_unpublish.py  test_renderer.py  test_request_context.py  test_require_principal.py  test_route_absence.py  test_static_serving.py
backend/tests/__snapshots__/test_renderer/: test_html_artifact_golden.html  test_markdown_golden.html
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ContentLibrary.tsx  ErrorState.tsx  MiddleTruncate.tsx  StatusBadge.tsx  UploadDropzone.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx  select.tsx  table.tsx  toast.tsx
frontend/src/hooks/: useLibrary.test.ts  useLibrary.ts
frontend/src/lib/: api.test.ts  api.ts  sourceType.test.ts  sourceType.ts  types.ts  upload.test.ts  upload.ts  utils.ts
infra/: .mocharc.json  .npmrc  Pulumi.prod.yaml.example  Pulumi.yaml  README.md  cdn.ts  certValidation.ts  cloudflare.ts  cloudflareIps.ts  compute.ts  config.ts  data.ts  index.ts  package-lock.json  package.json  securityHeaders.ts  tsconfig.json  tsconfig.test.json
infra/tests/: cdn.spec.ts  cloudflare.spec.ts  compute.spec.ts  data.spec.ts  securityHeaders.spec.ts
issues/: 01-walking-skeleton.md  02-access-verifier-local-proxy.md  03-content-renderer.md  04-presign-upload.md  05-finalize-upload.md  06-list-content.md  07-private-preview.md  08-publish-unpublish.md  09-frontend-skeleton-library.md  10-frontend-upload-publish.md  11-packaging-build-ci.md  12-infra-data.md  13-infra-compute-cdn.md  14-infra-cloudflare-deploy.md  README.md
scripts/: boundary_checks.sh  build_lambda.py
