[project]
name = "share"
version = "0.1.0"
description = "Private sharing service backend (FastAPI on Lambda via Mangum)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34",
    "fastapi>=0.110",
    "mangum>=0.17",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyjwt[crypto]>=2.8",
    "wenmode==0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "uvicorn>=0.29",
    "ruff>=0.6",
    "syrupy>=5.3.4",
    "moto[dynamodb,s3]>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/share"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom puts `Depends(...)` in argument defaults.
extend-immutable-calls = ["fastapi.Depends"]
