[project]
name = "share"
version = "0.1.0"
description = "Private sharing service backend (FastAPI on Lambda via Mangum)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34",
    "fastapi>=0.110",
    "mangum>=0.17",
    "pydantic>=2.8", # >=2.8 required for Python 3.13 (the dev/build host); versions <2.8 are incompatible
    "pydantic-settings>=2.2",
    "pyjwt[crypto]>=2.8",
    # wenmode is the (trusted, owner-vetted) Markdown renderer. This exact pin is
    # a DOCUMENTED EXCEPTION to the repo's 72h supply-chain floor: 0.7.0 was
    # published 2026-06-27, so a `uv lock --exclude-newer '3 days'` re-lock cannot
    # resolve it. Keep this pin; do not let `mise run relock` drop it. See PRD.md
    # "Supply-chain pin policy".
    "wenmode==0.7.0",
]

# Dev tooling lives in a PEP 735 dependency group (the non-deprecated successor
# to ``[tool.uv.dev-dependencies]``). uv installs the ``dev`` group by default
# for ``uv run`` / ``uv sync``, so ``uv run pytest`` works with no extra flags,
# while ``uv export --no-dev`` cleanly omits it from the vendored Lambda zip.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "uvicorn>=0.29",
    "ruff>=0.6",
    "syrupy>=5.3.4",
    "moto[dynamodb,s3]>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/share"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom puts `Depends(...)` in argument defaults.
extend-immutable-calls = ["fastapi.Depends"]
